...
  {
    name: 'Test Cases',
    href: '/cases',
    icon: DocumentTextIcon,
  },
  {
    name: 'Test Runs',
    href: '/runs',
    icon: PlayIcon,
  },
  {
    name: 'Test Plans',
    href: '/plans',
...
